// Copyright 2017 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/google/keytransparency/core/api/type/type_proto";

import "google/rpc/status.proto";
import "crypto/keyspb/keyspb.proto";

package google.keytransparency.type;

// User represents plain account information that gets committed to and obfuscated in Entry.
message User {
  // domain_id specifies the domain.
  string domain_id = 1;
  // app_id specifies that application.
  string app_id = 2;
  // user_id specifies the user.
  string user_id = 3;
  // public_key_data is the public key material for this account.
  bytes public_key_data = 4;
  // authorized_keys is the set of keys allowed to sign updates for this entry.
  repeated keyspb.PublicKey authorized_keys = 5;
  // status is set when account is part of a batch operation.
  google.rpc.Status status = 6;
  // TODO(gbelvin): Include UserProof and UserCommitment
}
